--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 datFiles/*.dat
 python/__pycache__
+python/classes/__pycache__
+python/helpers/__pycache__
+python/plotters/__pycache__
+python/utilities/__pycache__
