cleaning up, investigating data usage

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ python/classes/__pycache__
 python/helpers/__pycache__
 python/plotters/__pycache__
 python/utilities/__pycache__
+python/utilities/__pycache__/*
 */__pycache__/*
 *.cc
