some minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ python/helpers/__pycache__
 python/plotters/__pycache__
 python/utilities/__pycache__
 python/utilities/__pycache__/*
-*/__pycache__/*
+python/utilities/__pycache__/
 *.cc
