--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 datFiles/*.dat
+datFiles/*.tsv
 python/__pycache__
 python/classes/__pycache__
 python/helpers/__pycache__
@@ -6,4 +7,5 @@ python/plotters/__pycache__
 python/utilities/__pycache__
 python/utilities/__pycache__/*
 python/utilities/__pycache__/
+condor/*
 *.cc
