--- a/config/pyval/ul16_preVFP_step3_v00.cfg
+++ b/config/pyval/ul16_preVFP_step3_v00.cfg
@@ -3,10 +3,10 @@ DATA	/eos/home-n/nschroed/ECALELF/ul16/ul16_preVFP_data.csv
 #mc
 MC	/eos/home-n/nschroed/ECALELF/ul16/ul16_preVFP_mc.csv
 #scales
-SCALES	condor/ul16_preVFP_RunFineEtaR9_v00_2022-01-19/step3closure_ul16_preVFP_RunFineEtaR9_v00_2022-01-19_scales.dat
+SCALES	condor/ul16_postVFP_RunFineEtaR9_v1_2022_07_11/step2closure_ul16_postVFP_RunFineEtaR9_v1_2022_07_11_scales.dat
 #smearings
-SMEARINGS	/afs/cern.ch/user/n/nschroed/public/scales/Run2016/Run2016_2021-02-04_UltraLegacy_preVFP_RunFineEtaR9_v0_smearings.dat
+SMEARINGS	condor/ul16_preVFP_RunFineEtaR9_v0_2022_06_03/step3_ul16_preVFP_RunFineEtaR9_v0_2022_06_03_smearings.dat
 #weights
-WEIGHTS	datFiles/ptz_x_rapidity_weights_ul16_preVFP_RunFineEtaR9_v00_2022-01-19.tsv
+WEIGHTS	datFiles/ptz_x_rapidity_weights_ul16_preVFP_RunFineEtaR9_v0_2022_06_03.tsv
 #CATS
 CATS	config/pyval/plot_cats_standard.tsv
