--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ python/plotters/__pycache__
 python/utilities/__pycache__
 python/utilities/__pycache__/*
 python/utilities/__pycache__/
+python/*/__pycache__/*
 condor/*
 *.cc
