--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 datFiles/*.dat
 datFiles/*.tsv
-python/__pycache__
-python/classes/__pycache__
-python/helpers/__pycache__
-python/plotters/__pycache__
-python/utilities/__pycache__
-python/utilities/__pycache__/*
-python/utilities/__pycache__/
-python/*/__pycache__/*
+**/__pycache__/*
+**/*.pyc
 condor/*
 workspace/*
 *.cc
