--- a/config/pyval/test_ul18.cfg
+++ b/config/pyval/test_ul18.cfg
@@ -1,12 +1,12 @@
 #data
-DATA	/eos/home-n/nschroed/ECALELF/ul18/ul18_pruned_data.csv
+DATA	/home/nschroed/cern/pymin/data/ul18_pruned_data.csv
 #mc
-MC	/eos/home-n/nschroed/ECALELF/ul18/ul18_pruned_mc.csv
+MC	/home/nschroed/cern/pymin/data/ul18_pruned_mc.csv
 #scales
-SCALES	/afs/cern.ch/user/n/nschroed/public/scales/Run2018/step2closure_ul18_2021-09-08_stochastic_v3-05_scales.dat
+SCALES	/home/nschroed/cern/pymin/data/ul18_test/step2_ul18_test_scales.dat
 #smearings
-SMEARINGS	/afs/cern.ch/user/n/nschroed/public/scales/Run2018/Run2018_2021-09-03_RunFineEtaR9Et_stochastic_v3-05_smearings.dat
+SMEARINGS	/home/nschroed/cern/pymin/data/ul18_test/step2_ul18_test_smearings.dat
 #weights
-WEIGHTS	datFiles/ptz_x_rapidity_weights_test_ul18.tsv
+WEIGHTS	datFiles/ptz_x_rapidity_weights_ul18_test.tsv
 #CATS
 CATS	config/pyval/plot_cats_standard.tsv
