--- a/env.yml
+++ b/env.yml
@@ -39,8 +39,8 @@ dependencies:
       - packaging==23.2
       - pandas==2.2.0
       - pillow==10.2.0
+      - pyarrow==15.0.0
       - pyparsing==3.1.1
-      - python-dateutil==2.8.2
       - pytz==2023.3.post1
       - scipy==1.12.0
       - six==1.16.0
@@ -49,4 +49,3 @@ dependencies:
       - tzdata==2023.4
       - uproot==5.2.1
       - zipp==3.17.0
-# prefix: /home/nschroed/anaconda3/envs/scales-env
