--- a/config/pyval/test_ul18.cfg
+++ b/config/pyval/test_ul18.cfg
@@ -3,10 +3,10 @@ DATA	/eos/home-n/nschroed/pymin/data/ul18_pruned_data.csv
 #mc
 MC	/eos/home-n/nschroed/pymin/data/ul18_pruned_mc.csv
 #scales
-SCALES	condor/ul18_test/step2_ul18_test_scales.dat
+SCALES	datFiles/test_files/step1_ul18_test_scales.dat
 #smearings
-SMEARINGS	condor/ul18_test/step2_ul18_test_smearings.dat
+#SMEARINGS	condor/ul18_test/step2_ul18_test_smearings.dat
 #weights
-WEIGHTS	datFiles/ptz_x_rapidity_weights_ul18_test.tsv
+#WEIGHTS	datFiles/ptz_x_rapidity_weights_ul18_test.tsv
 #CATS
 CATS	config/pyval/plot_cats_standard.tsv
