--- a/env.yml
+++ b/env.yml
@@ -41,11 +41,12 @@ dependencies:
       - pillow==10.2.0
       - pyarrow==15.0.0
       - pyparsing==3.1.1
+      - python-dateutil==2.8.2
       - pytz==2023.3.post1
       - scipy==1.12.0
       - six==1.16.0
       - tqdm==4.66.1
       - typing-extensions==4.9.0
       - tzdata==2023.4
-      - uproot==5.2.1
       - zipp==3.17.0
+prefix: /afs/cern.ch/user/n/nschroed/.conda/envs/scales-env
