MINOR: debugging issues with mediumID and tightID

--- a/config/pyval/test_ul18.cfg
+++ b/config/pyval/test_ul18.cfg
@@ -1,12 +1,12 @@
 #data
-DATA	/eos/home-n/nschroed/pymin/data/ul18_pruned_data.csv
+DATA	examples/data/pruned_ul18_data.csv
 #mc
-MC	/eos/home-n/nschroed/pymin/data/ul18_pruned_mc.csv
+MC	examples/data/pruned_ul18_mc.csv
 #scales
-SCALES	datFiles/test_files/step1_ul18_test_scales.dat
+#SCALES	datFiles/test_files/step1_ul18_test_scales.dat
 #smearings
 #SMEARINGS	condor/ul18_test/step2_ul18_test_smearings.dat
 #weights
-#WEIGHTS	datFiles/ptz_x_rapidity_weights_ul18_test.tsv
+WEIGHTS	datFiles/ptz_x_rapidity_weights_ul18_test.tsv
 #CATS
 CATS	config/pyval/plot_cats_standard.tsv
