--- a/config/pyval/ul16_preVFP_step4_v00.cfg
+++ b/config/pyval/ul16_preVFP_step4_v00.cfg
@@ -1,12 +1,12 @@
 #data
-DATA	/eos/home-n/nschroed/ECALELF/ul16/ul16_preVFP_data.csv
+DATA	/eos/home-n/nschroed/pymin/data/ul16_preVFP_systTest_data.csv
 #mc
-MC	/eos/home-n/nschroed/ECALELF/ul16/ul16_preVFP_mc.csv
+MC	/eos/home-n/nschroed/pymin/data/ul16_preVFP_systTest_mc.csv
 #scales
-SCALES	condor/ul16_preVFP_RunFineEtaR9Et_v00_2022-03-03/step4closure_ul16_preVFP_RunFineEtaR9Et_v00_2022-03-03_scales.dat
+SCALES	/afs/cern.ch/user/n/nschroed/public/scales/Run2016/Run2016_2021-07-06_preVFP_stochastic_noMC_scales.dat
 #smearings
-SMEARINGS	condor/ul16_preVFP_RunFineEtaR9_v00_2022-01-30/step3_ul16_preVFP_RunFineEtaR9_v00_2022-01-30_smearings.dat
+SMEARINGS	/afs/cern.ch/user/n/nschroed/public/scales/Run2016/Run2016_2021-07-06_preVFP_stochastic_oldFormat_smearings.dat
 #weights
-WEIGHTS	datFiles/ptz_x_rapidity_weights_ul16_preVFP_RunFineEtaR9_v00_2022-01-30.tsv
+#WEIGHTS	datFiles/ptz_x_rapidity_weights_ul16_preVFP_RunFineEtaR9_v00_2022-01-30.tsv
 #CATS
 CATS	config/pyval/plot_cats_standard.tsv
