MINOR: fixed config file

--- a/config/pyval/ul16_preVFP_step4_v00.cfg
+++ b/config/pyval/ul16_preVFP_step4_v00.cfg
@@ -3,9 +3,9 @@ DATA	/eos/home-n/nschroed/ECALELF/ul16/ul16_preVFP_data.csv
 #mc
 MC	/eos/home-n/nschroed/ECALELF/ul16/ul16_preVFP_mc.csv
 #scales
-SCALES	~/public/scales/Run2016/Run2016_2021-07-06_preVFP_stochastic_scales.dat
+SCALES	/afs/cern.ch/user/n/nschroed/public/scales/Run2016/Run2016_2021-07-06_preVFP_stochastic_scales.dat
 #smearings
-SMEARINGS	~/public/scales/Run2016/Run2016_2021-07-06_preVFP_stochastic_oldFormat_smearings.dat
+SMEARINGS	/afs/cern.ch/user/n/nschroed/public/scales/Run2016/Run2016_2021-07-06_preVFP_stochastic_oldFormat_smearings.dat
 #weights
 #WEIGHTS	datFiles/ptz_x_rapidity_weights_ul16_preVFP_RunFineEtaR9_v00_2022-01-30.tsv
 #CATS
