MINOR: reset plots.py, update env.yml

--- a/env.yml
+++ b/env.yml
@@ -26,7 +26,6 @@ dependencies:
   - pip:
       - awkward==2.5.2
       - awkward-cpp==28
-      - awkward0==0.15.5
       - cachetools==5.3.2
       - contourpy==1.2.0
       - cycler==0.12.1
@@ -43,14 +42,11 @@ dependencies:
       - pillow==10.2.0
       - pyarrow==15.0.0
       - pyparsing==3.1.1
-      - python-dateutil==2.8.2
       - pytz==2023.3.post1
       - scipy==1.12.0
+      - seaborn==0.13.2
       - six==1.16.0
       - tqdm==4.66.1
       - typing-extensions==4.9.0
       - tzdata==2023.4
-      - uproot3==3.14.4
-      - uproot3-methods==0.10.1
       - zipp==3.17.0
-prefix: /home/nschroed/anaconda3/envs/scales-env
