--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "typing-extensions==4.9.0",
     "uproot3",
     "ruff",
+    "joblib",
 ]
 
 [project.optional-dependencies]
